--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,9 @@ dependencies {
     kapt("androidx.room:room-compiler:2.4.2")
     implementation"androidx.room:room-ktx:2.4.2"
 
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1")
 
     implementation 'com.squareup.picasso:picasso:2.71828'
