--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:name=".presentation.CharacterApp"
         android:supportsRtl="true"
         android:theme="@style/Theme.RickAndMortyCharacters">
         <activity
-            android:name=".MainActivity"
+            android:name=".presentation.CharactersListActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
