--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,13 +5,16 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".presentation.CharacterApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:name=".presentation.CharacterApp"
         android:supportsRtl="true"
         android:theme="@style/Theme.RickAndMortyCharacters">
+        <activity
+            android:name=".presentation.CharacterDetailActivity"
+            android:exported="true" />
         <activity
             android:name=".presentation.CharactersListActivity"
             android:exported="true">
