--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0'
 
+
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1")
@@ -60,4 +61,6 @@ dependencies {
 
     implementation 'com.google.dagger:dagger:2.35.1'
     kapt 'com.google.dagger:dagger-compiler:2.35.1'
+
+    implementation("androidx.work:work-runtime-ktx:2.7.1")
 }
